fixed spacing in the top left of header

--- a/googleHomepage.css
+++ b/googleHomepage.css
@@ -12,6 +12,10 @@ a{
     color: black;
 }
 
+a:hover{
+    text-decoration: underline;
+}
+
 body{
     margin-top: 16px;
 }
@@ -24,7 +28,14 @@ body{
     margin-left: 10px;
     margin-top: 7px;
     display: inline-block;
-    /* TODO: align with header products */
+
+}
+
+#header-about a{
+    padding-left: 15px;
+
+    /* float to remove whitespace */
+    float: left;
 }
 
 #header-products{
@@ -101,10 +112,6 @@ footer a{
 footer a{
     font-size: 14px;
     line-height: 40px;
-}
-
-footer a:hover{
-    text-decoration: underline;
 }
 
 #carbon{
